# MAI_OOP_Lab2

./: .gitignore  CMakeLists.txt  README.md
include/: bit_string.h
src/: bit_string.cpp  bit_string_2.cpp
test/: bit_string_test.cpp
